# oxymon

./: Cargo.toml  README.md  rust-toolchain.toml
src/: main.rs
ui/: mainWindow.slint
ui/components/: measurementScreen.slint  multiView.slint  oxygenationGraph.slint  splashScreen.slint
ui/components/gauges/: bpmGauge.slint  gauge.slint  oxygenationGauge.slint  temperatureGauge.slint
